--- a/views/index.pug
+++ b/views/index.pug
@@ -11,3 +11,7 @@ block content
       a(href="/typography") Typography
     li
       a(href="/modals") Modals
+    li
+      a(href="/forms") Forms
+    li
+      a(href="/lists") Lists
