--- a/public/stylesheets/typography/p.css
+++ b/public/stylesheets/typography/p.css
@@ -1,10 +1,12 @@
 p {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 19.2px;
   color: rgba(255, 255, 255, 1.0)
 }
 
-p .muted {
+.text-muted {
+  
+  color:#FFFFFF !important;
   opacity: 0.7;
 }
