--- a/public/templates/forms/select.html
+++ b/public/templates/forms/select.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-    <button class="btn btn-sm btn-outline-secondary dropdown-toggle mx-auto" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+    <button class="btn btn-sm btn-outline-primary dropdown-toggle btn-block" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
       aria-expanded="false">
       Dropdown button
     </button>
