Use glob for recursive file searching and add syntax highlighting
The syntax highlighting needs some more love though

--- a/views/content-layout.pug
+++ b/views/content-layout.pug
@@ -21,6 +21,11 @@ html
 
     script(src="https://use.fontawesome.com/118cceda66.js")
 
+    link(
+      rel="stylesheet" 
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css"
+    )
+
     script(src="/javascripts/retrieve.js")
     script(src="/javascripts/styleguide.js")
     script(src="/javascripts/xhr.js")
@@ -36,4 +41,8 @@ html
   body
     a(href="/") All Examples
     block content
+
+    script(
+      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"
+    )
 
