--- a/public/stylesheets/typography/h3.css
+++ b/public/stylesheets/typography/h3.css
@@ -3,3 +3,9 @@ h3 {
   font-weight: 300;
   line-height: 25.2px;
 }
+
+.subsection h3 {
+  font-style: italic;
+  text-transform: uppercase;
+  color: #0CBE50;
+}
