--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to the #{title}
 
   ul
     li
@@ -15,3 +15,5 @@ block content
       a(href="/forms") Forms
     li
       a(href="/lists") Lists
+    li
+      a(href="/tabs") Tabs
