--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,7 @@
-extends layout
+extends content-layout
 
-block content
+block append content
   h1= title
-  p Welcome to the #{title}
 
   ul
     li
