--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -48,3 +48,11 @@ body {
 .bg {
   border-radius: 8px;
 }
+
+.new {
+  position: absolute;
+  right: 2%;
+  bottom: 3%;
+  font-size: 2em;
+  font-weight: bold;
+}
