--- a/views/content.pug
+++ b/views/content.pug
@@ -1,1 +1,7 @@
 extends content-layout
+
+block append content
+  a(
+      href="/add/" + folderName
+      class="btn btn-outline-secondary add"
+    ) New Entry
