--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -49,10 +49,10 @@ body {
   border-radius: 8px;
 }
 
-.new {
-  position: absolute;
-  right: 2%;
-  bottom: 3%;
+.add {
+  position: fixed;
+  right: 1%;
+  bottom: 1%;
   font-size: 2em;
   font-weight: bold;
 }
