--- a/public/templates/entry-template.html
+++ b/public/templates/entry-template.html
@@ -2,19 +2,20 @@
   <h3 class="text-center"></h3>
 </div>
 
-<div class="col-5">
+<div class="col-md-5 col-xs-12">
   <pre class="pre">
     <code class="css">
     </code>
   </pre>
 </div>
-<div class="example col-7">
+<div class="example col-xs-12 col-md-7">
   <div class="bg root">
   </div>
 </div>
-<div class="html col-12 d-none">
+<div class="html col-12">
+  <h3>Example:</h3>
   <pre>
-    <code class="code"></code>
+    <code class="code html"></code>
   </pre>
 </div>
 </div>
