--- a/views/add-files.pug
+++ b/views/add-files.pug
@@ -5,8 +5,8 @@ block scripts
 block append content
   form(method='POST' class="container")
     <div class="form-group row">
-      label(for="sectionName") Section Name
-      input(type="text" name="sectionName" class="form-control" id="sectionName" placeholder="Section Name")
+      label(for="fileName") File Name
+      input(type="text" name="fileName" class="form-control" id="sectionName" placeholder="File Name")
     </div>
     if error
       div(class="form-group row has-danger")
