Add ability to change bg colours

--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -45,6 +45,42 @@ body {
   /* IE6-9 */
 }
 
+.bg-match-critical-dark{
+  background: #360F28; /* Old browsers */
+  background: -moz-linear-gradient(top, #360F28 0%, #293040 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #360F28 0%,#293040 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #360F28 0%,#293040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#360F28', endColorstr='#293040',GradientType=0 ); /* IE6-9 */
+}
+.bg-match-essential-dark{
+  background: #411B04; /* Old browsers */
+  background: -moz-linear-gradient(top, #411B04 0%, #293040 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #411B04 0%,#293040 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #411B04 0%,#293040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#411B04', endColorstr='#293040',GradientType=0 ); /* IE6-9 */
+}
+.bg-match-important-dark{
+  background: #0D1F0F; /* Old browsers */
+  background: -moz-linear-gradient(top, #0D1F0F 0%, #293040 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #0D1F0F 0%,#293040 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #0D1F0F 0%,#293040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0D1F0F', endColorstr='#293040',GradientType=0 ); /* IE6-9 */
+}
+.bg-match-helpful-dark{
+  background: #082633; /* Old browsers */
+  background: -moz-linear-gradient(top, #082633 0%, #293040 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #082633 0%,#293040 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #082633 0%,#293040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#082633', endColorstr='#293040',GradientType=0 ); /* IE6-9 */
+}
+.bg-match-useful-dark{
+  background: #031F3C; /* Old browsers */
+  background: -moz-linear-gradient(top, #031F3C 0%, #293040 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #031F3C 0%,#293040 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #031F3C 0%,#293040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#031F3C', endColorstr='#293040',GradientType=0 ); /* IE6-9 */
+}
+
 .bg {
   border-radius: 8px;
 }
