--- a/public/templates/buttons/1. default.html
+++ b/public/templates/buttons/1. default.html
@@ -1,4 +1,4 @@
-<div class="root bg text-center">
-  <button class="btn"> Default Button </button>
-  <button class="btn" disabled> Button</button>
+<div class="text-center">
+  <button class="btn">Default Button </button>
+  <button class="btn" disabled>Button</button>
 </div>
