--- a/public/templates/buttons/link-outline.html
+++ b/public/templates/buttons/link-outline.html
@@ -1,4 +1,4 @@
-<div class="root bg text-center">
+<div class="text-center">
     <button class="btn btn-link"> Link Button </button>
     <button class="btn btn-link" disabled> Link Button</button>
 </div>
