--- a/public/templates/buttons/secondary-outline.html
+++ b/public/templates/buttons/secondary-outline.html
@@ -1,4 +1,4 @@
-<div class="root bg text-center">
+<div class="text-center">
   <button class="btn btn-outline-secondary">Secondary Button</button>
   <button class="btn btn-outline-secondary" disabled>Secondary Button</button>
 </div>
