--- a/public/templates/buttons/primary-outline.html
+++ b/public/templates/buttons/primary-outline.html
@@ -1,4 +1,4 @@
-<div class="root bg text-center">
-  <button class="btn btn-outline-primary"> Primary Button </button>
-  <button class="btn btn-outline-primary" disabled> Primary Button</button>
+<div class="text-center">
+  <button class="btn btn-outline-primary">Primary Button </button>
+  <button class="btn btn-outline-primary" disabled>Primary Button</button>
 </div>
