--- a/public/templates/buttons/success-outline.html
+++ b/public/templates/buttons/success-outline.html
@@ -1,4 +1,4 @@
-<div class="root bg text-center">
+<div class="text-center">
   <button class="btn btn-outline-success"> Success Button </button>
   <button class="btn btn-outline-success" disabled> Success Button</button>
 </div>
