--- a/public/templates/tabs/main-stage-menu.html
+++ b/public/templates/tabs/main-stage-menu.html
@@ -1,1 +1,11 @@
-<h1>Softare Developer</h1>
+<ul class="nav nav-pills nav-justified">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
