--- a/views/content.pug
+++ b/views/content.pug
@@ -5,3 +5,33 @@ block append content
       href="/add/" + folderName
       class="btn btn-outline-secondary add"
     ) New Entry
+
+block append buttons 
+  a(
+    href="#"
+    role="button"
+    data-value="critical-dark"
+    onClick="changeBg(this)"
+    class="btn btn-primary"
+  ) Change bg to critical-dark
+  a(
+    href="#"
+    role="button"
+    data-value="essential-dark"
+    onClick="changeBg(this)"
+    class="btn btn-primary"
+  ) Change bg to essential-dark
+   a(
+    href="#"
+    role="button"
+    data-value="important-dark"
+    onClick="changeBg(this)"
+    class="btn btn-primary"
+  ) Change bg to important-dark
+  a(
+    href="#"
+    role="button"
+    data-value="helpful-dark"
+    onClick="changeBg(this)"
+    class="btn btn-primary"
+  ) Change bg to helpful-dark
