--- a/public/stylesheets/forms/checkbox.css
+++ b/public/stylesheets/forms/checkbox.css
@@ -8,7 +8,7 @@
 }
 
 .custom-control-input:checked~.custom-control-indicator {
-  background: none;
+  background: transparent;
   outline: none;
   border: 1px solid #FFFFFF;
   user-select: none;
