--- a/public/templates/entry-template.html
+++ b/public/templates/entry-template.html
@@ -7,6 +7,10 @@
     <code class="css">
     </code>
   </pre>
+  <textarea rows="4" cols"50" class="d-none form-control"></textarea>
+  <div class="text-right">
+    <a class="btn btn-link" onclick="editCss(this);">Edit</a>
+  </div>
 </div>
 <div class="example col-xs-12 col-md-7">
   <div class="bg root">
