--- a/public/templates/icons/icons.html
+++ b/public/templates/icons/icons.html
@@ -1,4 +1,21 @@
-<p><i class="fa fa-check" aria-hidden="true"></i> Check</p>
-<p><i class="fa fa-search" aria-hidden="true"></i> Search</p>
-<p><i class="fa fa-print" aria-hidden="true"></i> Print</p>
-<p><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Download PDF</p>
+<p><i class="fal fa-search fa-lg fa-fw opacity70" aria-hidden="true"></i> Search</p>
+<p><i class="fal fa-sliders-v fa-lg fa-fw opacity70" aria-hidden="true"></i> Filter results</p>
+<p><i class="fal fa-sort fa-lg fa-fw opacity70" aria-hidden="true"></i> Sort results</p>
+<p><i class="fas fa-th-large fa-lg fa-fw opacity70" aria-hidden="true"></i> Grid view</p>
+<p><i class="fal fa-check fa-fw opacity70" aria-hidden="true"></i> Check</p>
+<p><i class="fal fa-check fa-fw text-success" aria-hidden="true"></i> Success check</p>
+<p><i class="fal fa-minus fa-lg fa-fw opacity40" aria-hidden="true"></i> Dash</p>
+<p><i class="fas fa-exclamation fa-fw text-danger" aria-hidden="true"></i> Exclamation</p>
+<p><i class="fal fa-print fa-lg fa-fw opacity70" aria-hidden="true"></i> Print</p>
+<p><i class="fal fa-file-pdf fa-lg fa-fw opacity70" aria-hidden="true"></i> Download PDF</p>
+<p><i class="fal fa-user-plus fa-lg fa-fw opacity70" aria-hidden="true"></i> Add applicant to other job</p>
+<p><i class="fal fa-lock fa-lg fa-fw opacity70" aria-hidden="true"></i> Lock</p>
+<p><i class="fal fa-bell fa-lg fa-fw opacity40" aria-hidden="true"></i> Notification bell (no new)</p>
+<p>
+  <span class="fa-layers fa-fw">
+    <i class="fal fa-bell fa-lg text-danger rotate7"></i>
+    <span class="fa-layers-counter fa-2x" style="background:#FF0062">5</span>
+  </span>
+ Notification bell (new notifications)
+</p>
+<p><i class="fal fa-spinner-third fa-2x fa-spin"></i> Loading</p>
