--- a/public/templates/modals/modal.html
+++ b/public/templates/modals/modal.html
@@ -4,7 +4,7 @@
       <div class="modal-header row">
         <h2 class="modal-title col-10">Modal title</h2>
         <button type="button" class="close col-2" data-dismiss="modal" aria-label="Close">
-          <i class="fa fa-close" aria-hidden="true"></i>
+          <i class="fal fa-times" aria-hidden="true"></i>
         </button>
       </div>
       <div class="modal-body text-center">
