--- a/public/templates/progress-bars/progress-danger.html
+++ b/public/templates/progress-bars/progress-danger.html
@@ -1,11 +1,11 @@
-<div class="clearfix">
-	<div class="progress">
-  		<div class="progress-bar progress-bar-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-	</div>
-	<div class="pull-left">
-		<p class="text-left text-progress text-danger"><strong>50%</strong><p>
-	</div>
-	<div class="pull-right">
-		<p class="text-right text-progress text-muted">Updated just now</p>
-	</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="clearfix">	
+  <div class="float-left">
+	<p class="text-left text-progress text-danger"><strong>50%</strong><p>
+  </div>
+  <div class="float-right">
+	<p class="text-right text-progress text-muted">Updated just now</p>
+  </div>
 </div>
