--- a/views/content-layout.pug
+++ b/views/content-layout.pug
@@ -16,6 +16,8 @@ block append header
     script(src="/javascripts/xhr.js")
     script(src="/javascripts/entry.js")
     script(src="/javascripts/bg.js")
+    script(src="/javascripts/edit.js")
+    script(src="/javascripts/fontawesome-all.min.js")
 
   link(rel="stylesheet" type="text/css" href="/stylesheets/shared.css")
   link(rel="stylesheet" type="text/css" href="/stylesheets/hljs.css")
@@ -29,7 +31,7 @@ block content
 
   block buttons
 
-  div(id="entries" class="container")
+  div(id="entries")
     div(class="row pd-content")
         h1(class="pd-title col-12 text-center")
 
