--- a/public/templates/progress-bars/progress-success.html
+++ b/public/templates/progress-bars/progress-success.html
@@ -1,11 +1,11 @@
+<div class="progress">
+  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
 <div class="clearfix">
-	<div class="progress">
-  		<div class="progress-bar progress-bar-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-	</div>
-	<div class="pull-left">
-		<p class="text-left text-progress text-success"><strong>100%</strong><p>
-	</div>
-	<div class="pull-right">
-		<p class="text-right text-progress text-muted">Updated just now</p>
-	</div>
+  <div class="float-left">
+    <p class="text-left text-progress text-success"><strong>100%</strong></p>
+  </div>
+  <div class="float-right">
+    <p class="text-right text-progress text-muted">Updated just now</p>
+  </div>
 </div>
