--- a/public/templates/typography/meta.html
+++ b/public/templates/typography/meta.html
@@ -1,2 +1,2 @@
-<h1>Softare Developer</h1>
-<span class="meta">Create a long time ago</span>
+<h1>Software Developer</h1>
+<span class="meta">Created just now</span>
