--- a/views/base.pug
+++ b/views/base.pug
@@ -15,27 +15,16 @@ html
       script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous")
 
-      link(rel="stylesheet" href="https://use.fontawesome.com/releases/v4.7.0/css/font-awesome-css.min.css"
-        type="text/css"
-      )
-
-      script(src="https://use.fontawesome.com/118cceda66.js")
-
+     
       block styles
 
 block root
-  body
-    div(class="container")
-      ul(class="nav justify-content-center")
-        li(class="nav-item")
-          a(class="nav-link") Text
-        li(class="nav-item")
-          a(class="nav-link") Text
-
+  body(class="bg-default-dark")
+    div(class="container-fluid")
       div(class="row")
         div(class="col-2")
           block nav
-            a(href="/") Back
+            a(href="/" class="btn btn-sm btn-link") Back
 
         div(class="col-10")
           block content
