--- a/views/content.pug
+++ b/views/content.pug
@@ -10,28 +10,42 @@ block append buttons
   a(
     href="#"
     role="button"
+    data-value="default-dark"
+    onClick="changeBg(this)"
+    class="btn btn-sm btn-link"
+  ) Change to bg
+  a(
+    href="#"
+    role="button"
     data-value="critical-dark"
     onClick="changeBg(this)"
-    class="btn btn-primary"
+    class="btn btn-sm btn-link"
   ) Change bg to critical-dark
   a(
     href="#"
     role="button"
     data-value="essential-dark"
     onClick="changeBg(this)"
-    class="btn btn-primary"
+    class="btn btn-sm btn-link"
   ) Change bg to essential-dark
    a(
     href="#"
     role="button"
     data-value="important-dark"
     onClick="changeBg(this)"
-    class="btn btn-primary"
+    class="btn btn-sm btn-link"
   ) Change bg to important-dark
   a(
     href="#"
     role="button"
     data-value="helpful-dark"
     onClick="changeBg(this)"
-    class="btn btn-primary"
+    class="btn btn-sm btn-link"
   ) Change bg to helpful-dark
+  a(
+    href="#"
+    role="button"
+    data-value="useful-dark"
+    onClick="changeBg(this)"
+    class="btn btn-sm btn-link"
+  ) Change bg to useful-dark
