--- a/public/templates/icons/icons.html
+++ b/public/templates/icons/icons.html
@@ -13,9 +13,12 @@
 <p><i class="fal fa-bell fa-lg fa-fw opacity40" aria-hidden="true"></i> Notification bell (no new)</p>
 <p>
   <span class="fa-layers fa-fw">
-    <i class="fal fa-bell fa-lg text-danger rotate7"></i>
-    <span class="fa-layers-counter fa-2x" style="background:#FF0062">5</span>
+    <i class="fal fa-bell fa-lg fa-fw text-danger rotate7"></i>
+    <span class="fa-layers-counter fa-fw fa-2x" style="background:#FF0062">5</span>
   </span>
- Notification bell (new notifications)
+&nbsp;Notification bell (new notifications)
 </p>
+<p><i class="fal fa-angle-left fa-lg fa-fw opacity70"></i> Left Chevron</p>
+<p><i class="fal fa-angle-right fa-lg fa-fw opacity70"></i> Right Chevron</p>
+<p><i class="fal fa-angle-down fa-lg fa-fw opacity70"></i> Down Chevron</p>
 <p><i class="fal fa-spinner-third fa-2x fa-spin"></i> Loading</p>
