--- a/public/templates/modals/modal.html
+++ b/public/templates/modals/modal.html
@@ -1,18 +1,31 @@
-<div class="modal mx-auto" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content bg-default-dark">
-      <div class="modal-header row">
-        <h2 class="modal-title col-10">Modal title</h2>
-        <button type="button" class="close col-2" data-dismiss="modal" aria-label="Close">
-          <i class="fal fa-times" aria-hidden="true"></i>
-        </button>
+      <div class="modal-header">
+        <div class="container">
+          <div class="row">
+            <div class="col-10 px-0">
+              <h4 class="modal-title">Match Criteria</h4>
+              <p class="text-muted">For the Software Developer role</p>
+            </div>
+            <div class="col-2 px-0">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true" class="fal fa-times text-right"></span>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body text-center">
+      <div class="modal-body">
         <p>Modal body text goes here.</p>
       </div>
-      <div class="modal-footer mx-auto">
-        <button type="button" class="btn">Save changes</button>
-        <button type="button" class="btn" data-dismiss="modal">Close</button>
+      <div class="modal-footer">
+        <div class="col-6 float-left px-0">
+          <button type="button" class="btn btn-link btn-sm" data-dismiss="modal">Close</button>
+        </div>
+        <div class="col-6 float-right px-0">
+          <button type="button" class="btn btn-link btn-sm float-right">Save changes</button>
+        </div>
       </div>
     </div>
   </div>
