Add side menus for easier navigation

--- a/public/stylesheets/buttons/1. default.css
+++ b/public/stylesheets/buttons/1. default.css
@@ -22,6 +22,10 @@
     .btn-outline-primary:hover,
     .btn-outline-primary:active,
     .btn-outline-primary:focus,
+    .btn-outline-secondary,
+    .btn-outline-secondary:hover,
+    .btn-outline-secondary:active,
+    .btn-outline-secondary:focus,
     .btn-outline-success,
     .btn-outline-success:hover,
     .btn-outline-success:active,
