--- a/views/base.pug
+++ b/views/base.pug
@@ -23,12 +23,15 @@ block root
     div(class="container-fluid")
       div(class="row")
         div(class="col-2")
-          block nav
-            a(href="/" class="btn btn-sm btn-link") Back
+          ul(class="nav flex-column sticky-top")
+            li(class="nav-item")
+              a(href="/" class="btn btn-sm btn-link") Back
+            block nav
 
-        div(class="col-10")
+        div(class="col-8")
           block content
       
-          
+        div(class="col-2")
+          ul(class="nav flex-column sticky-top side-nav")
 
     
