--- a/public/templates/forms/checkbox.html
+++ b/public/templates/forms/checkbox.html
@@ -1,2 +1,4 @@
-<input type="checkbox" id="1">
-<label for="1"> Checkbox</label>
+<div class="checkbox">
+  <input type="checkbox" id="myCheckbox" name="myCheckbox" value="myCheckbox">
+  <label for="myCheckbox">Checkbox Label</label>
+</div>
