--- a/public/templates/typography/profile-subheader.html
+++ b/public/templates/typography/profile-subheader.html
@@ -1,5 +1,5 @@
-<h4 class="profile-subheader">Professionally, you are...</h4>
+<h4 class="text-green">Professionally, you are...</h4>
 <h4
-  class="profile-subheader font-italic text-uppercase">
+  class="text-green font-italic text-uppercase">
   Professionally, you are...
 </h4>
