--- a/views/index.pug
+++ b/views/index.pug
@@ -25,4 +25,4 @@ block root
         div(class="card-block")
           h4(class="card-title") new section
         div(class="card-footer")
-          a(role="button" href="/new" class="card-link") create
+          a(role="button" href="/new/section" class="card-link") create
