--- a/public/stylesheets/forms/input.css
+++ b/public/stylesheets/forms/input.css
@@ -2,7 +2,7 @@ input.form-control,
 textarea.form-control {
   color: rgba(255, 255, 255, 1.0) !important;
   border: 1px solid transparent;
-  background-color: rgba(255, 255, 255, 0.2)
+  background-color: rgba(255, 255, 255, 0.2);
   transition: .2s ease-in-out;
 }
 
