--- a/public/templates/progress-bars/progress-danger.html
+++ b/public/templates/progress-bars/progress-danger.html
@@ -1,5 +1,5 @@
 <div class="progress">
-  <div class="progress-bar progress-bar-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <div class="clearfix">	
   <div class="float-left">
