--- a/public/templates/progress-bars/progress-success.html
+++ b/public/templates/progress-bars/progress-success.html
@@ -1,5 +1,5 @@
 <div class="progress">
-  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <div class="clearfix">
   <div class="float-left">
