--- a/views/index.pug
+++ b/views/index.pug
@@ -14,15 +14,15 @@ block root
     <h1>Style Guide</h1>
     div(class="card-columns")
       each val in templates || []
-        div(class="card")
-          div(class="card-block")
+        div(class="card card-outline-primary")
+          div(class="card-header")
             a(href=val class="card-link") 
               h4(class="card-title")= val
           div(class="card-footer")
             a(href=val class="card-link") view
 
-      div(class="card")
-        div(class="card-block")
+      div(class="card card-outline-primary")
+        div(class="card-header")
           h4(class="card-title") new section
         div(class="card-footer")
           a(role="button" href="/new/section" class="card-link") create
