--- a/public/stylesheets/buttons/1. default.css
+++ b/public/stylesheets/buttons/1. default.css
@@ -1,46 +1,45 @@
+/* .btn class should never be used alone. Always add a styled class (e.g. btn-primary). */
 .btn {
-      padding: 12px 16px;
-      background: none;
-      opacity: 0.85;
-      text-transform: uppercase;
-      color: #FFFFFF;
-      box-shadow: none;
-      cursor: pointer;
-    }
+  opacity: 0.85;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  box-shadow: none;
+  cursor: pointer;
+}
 
-    .btn:hover {
-      opacity: 1;
-      text-shadow: 0 0 20px;
-    }
+.btn:hover {
+  opacity: 1;
+  text-shadow: 0 0 20px;
+}
 
-    .btn:disabled {
-      opacity: 0.4;
-      text-shadow: none;
-    }
+.btn:disabled {
+  opacity: 0.4;
+  text-shadow: none;
+}
 
-    .btn-outline-primary,
-    .btn-outline-primary:hover,
-    .btn-outline-primary:active,
-    .btn-outline-primary:focus,
-    .btn-outline-secondary,
-    .btn-outline-secondary:hover,
-    .btn-outline-secondary:active,
-    .btn-outline-secondary:focus,
-    .btn-outline-success,
-    .btn-outline-success:hover,
-    .btn-outline-success:active,
-    .btn-outline-success:focus,
-    .btn-outline-danger,
-    .btn-outline-danger:active,
-    .btn-outline-danger:disabled,
-    .btn-outline-danger:focus,
-    .btn-outline-danger:hover,
-    .btn-link,
-    .btn-link:active,
-    .btn-link:disabled,
-    .btn-link:focus,
-    .btn-link:hover {
-      background: transparent;
-      box-shadow: none;
-      text-decoration: none;
-    }
+.btn-outline-primary,
+.btn-outline-primary:hover,
+.btn-outline-primary:active,
+.btn-outline-primary:focus,
+.btn-outline-secondary,
+.btn-outline-secondary:hover,
+.btn-outline-secondary:active,
+.btn-outline-secondary:focus,
+.btn-outline-success,
+.btn-outline-success:hover,
+.btn-outline-success:active,
+.btn-outline-success:focus,
+.btn-outline-danger,
+.btn-outline-danger:active,
+.btn-outline-danger:disabled,
+.btn-outline-danger:focus,
+.btn-outline-danger:hover,
+.btn-link,
+.btn-link:active,
+.btn-link:disabled,
+.btn-link:focus,
+.btn-link:hover {
+  background: none;
+  box-shadow: none;
+  text-decoration: none;
+}
