--- a/public/stylesheets/colours/_backgrounds.css
+++ b/public/stylesheets/colours/_backgrounds.css
@@ -1,6 +1,7 @@
 bg {
   display: inline-block;
-  width: 100px;
-  height: 50px;
+  width: 90px;
+  padding:12px 0;
+  border-radius:4px;
   margin-top: 4px;
 }
