--- a/public/templates/colours/backgrounds.html
+++ b/public/templates/colours/backgrounds.html
@@ -1,6 +1,7 @@
-<bg class="bg-success text-center">Success</bg>
-<bg class="bg-primary text-center"><span style="color:black">Primary</span></bg>
+<bg class="bg-primary text-center text-black">Primary</bg>
 <bg class="bg-danger text-center">Danger</bg>
+<bg class="bg-success text-center">Success</bg>
+<br>
 <bg class="bg-critical text-center">Critical</bg>
 <bg class="bg-essential text-center">Essential</bg>
 <bg class="bg-important text-center">Important</bg>
