--- a/public/templates/forms/checkbox.html
+++ b/public/templates/forms/checkbox.html
@@ -1,4 +1,5 @@
-<div class="checkbox">
-  <input type="checkbox" id="myCheckbox" name="myCheckbox" value="myCheckbox">
-  <label for="myCheckbox">Checkbox Label</label>
-</div>
+<div class="form-check">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox"> Checkbox
+    </label>
+  </div>
