--- a/public/templates/forms/input.html
+++ b/public/templates/forms/input.html
@@ -8,7 +8,7 @@
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@plum.io" disabled>
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail">Diabled class</label>
+    <label for="exampleInputEmail">Disabled class (styling only, use disabled attribute when you need the form element to legitimately be disabled)</label>
     <input type="email" class="form-control disabled" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@plum.io">
   </div>
   <div class="form-group">
